fixed text alignment for players section

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ th {
 }
 
 td {
+  text-align: center;
   height: 100px;
   width: 100px;
   border: 1px solid black;
